--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "axios-mock-adapter": "1.15.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "dompurify": "^1.0.11",
     "express": "^4.17.1",
     "history": "4.7.2",
-    "jquery": "3.2.1",
+    "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "react": "^16.8.6",
     "react-autocomplete": "^1.8.1",
